service.yaml
apiVersion: v1
kind: Service
metadata:
  name: caddy
spec:
  ports:
  - name: 80-8888
    port: 80
    protocol: TCP
    targetPort: 8888
  selector:
    app: caddy
  type: ClusterIP
